# JobLook

documentation/: API.md  ARCHITECTURE.md  BACKEND.md  DATA_MODEL.md  EXTENSION.md  PRD.md  PREMIUM_PRD.md  PROFILE_SCHEMA.md  README.md  SECURITY.md  SMOKE_TEST.md  STATUS.md
extensions/joblook/: manifest.json
extensions/joblook/content/: main.js  (+1 more)
services/joblook-backend/: .env.example  alembic.ini  demo_main.py  pyproject.toml
services/joblook-backend/alembic/: env.py
services/joblook-backend/alembic/versions/: 20260414_0001_initial.py
services/joblook-backend/app/: auth.py  config.py  crypto.py  main.py  models.py  profile_store.py  resume_parser.py  schemas.py
services/joblook-backend/app/autofill/: classifier.py  llm.py
services/joblook-backend/app/blog_posts/: ai-cover-letters.md  automate-job-applications.md  pre-submit-checklist.md  two-minute-tailoring-rule.md  why-only-three-ats.md
services/joblook-backend/app/middleware/: admin.py
services/joblook-backend/app/routes/: admin.py  auth.py  autofill.py  blog.py  dashboard.py  extension.py
services/joblook-backend/app/static/: app.css
services/joblook-backend/app/templates/: about.html  base.html  blog.html  blog_post.html  contact.html  marketing.html  pricing.html  product.html
services/joblook-backend/app/templates/admin/: dashboard.html  user_detail.html  users.html
services/joblook-backend/app/templates/auth/: connect_extension.html  login.html  signup.html
services/joblook-backend/app/templates/dashboard/: account.html  home.html  profile.html  resume_review.html  resume_upload.html
(+11 files in other folders)
